--- a/backend/src/main/resources/templates/backend/spring/Dockerfile
+++ b/backend/src/main/resources/templates/backend/spring/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM gradle:9.2.0-jdk21-corretto-al2023 AS build
+FROM gradle:8.5-jdk17 AS build
 WORKDIR /app
 
 COPY build.gradle.kts settings.gradle.kts ./
@@ -9,7 +9,7 @@ COPY src src
 RUN gradle build --no-daemon -x test
 
 # Runtime stage
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 
 COPY --from=build /app/build/libs/*.jar app.jar
